--- a/src/components/customdropdown/index.css
+++ b/src/components/customdropdown/index.css
@@ -47,6 +47,7 @@
   padding-top: 12px !important;
   padding-bottom: 12px !important;
   border-radius: 8px !important;
+  overflow-y: auto;
 }
 
 .dropdown-menu.show {
