--- a/src/pages/register/index.css
+++ b/src/pages/register/index.css
@@ -17,66 +17,13 @@
   padding: 2.4rem 4rem 3.2rem;
 }
 
-.register-header {
-  margin-bottom: 2.2rem;
-  display: flex;
-}
-
-.step-button-wrapper {
-  display: flex;
-  flex-flow: column;
-}
-
-.step-button-wrapper button {
-  border: 2px solid rgb(98, 98, 98) !important;
-  border-radius: 9999px;
-  width: 36px;
-  height: 36px;
-  color: rgb(98, 98, 98);
-  font-size: 16px;
-  font-weight: 400;
-  background-color: transparent;
-}
-
-.step-button-wrapper.done button {
-  color: rgb(14, 129, 54);
-  border-color: rgb(14, 129, 54) !important;
-}
-
-.step-button-wrapper.active button {
-  color: rgb(14, 129, 54);
-  border-color: rgb(14, 129, 54) !important;
-}
-
-.step-button-wrapper .step-title {
-  font-size: 14px;
-  line-height: 16px;
-  font-weight: 400;
-  color: rgb(98, 98, 98);
-  letter-spacing: -0.42px;
-  text-decoration: none;
-  pointer-events: none;
-}
-
-.step-button-wrapper.active .step-title {
-  color: rgb(14, 129, 54);
-}
-
-.step-button-wrapper.done .step-title {
-  color: rgb(28, 28, 28);
-  pointer-events: fill;
-}
-.step-button-wrapper.done .step-title:hover {
-  text-decoration: underline;
-}
-
 @media screen and (max-width: 600px) {
   .register-container {
     padding: 24px 16px 32px;
   }
 }
 
-.submit-loading{
+.submit-loading {
   position: absolute;
   top: 0;
   left: 0;
@@ -95,7 +42,7 @@
   width: 80px;
   height: 80px;
   box-sizing: border-box;
-  color: #4d585c
+  color: #4d585c;
 }
 
 .lds-ring div {
