--- a/src/pages/business/components/businessitem/styles.css
+++ b/src/pages/business/components/businessitem/styles.css
@@ -19,12 +19,12 @@
   padding: 23px 40px 0px;
 }
 .business-icon-container {
-  background: red;
   width: 48px;
   height: 48px;
   display: flex;
   align-items: center;
   justify-content: center;
+  background: #f0f0f0 no-repeat 50%;
   border: 1px solid #dedede;
   border-radius: 4px;
 }
