--- a/src/pages/postjob/index.css
+++ b/src/pages/postjob/index.css
@@ -202,3 +202,7 @@ a.register-desc-link:hover {
   color: rgb(0, 0, 0);
   letter-spacing: -0.48px;
 }
+
+div.invalid-feedback-input{
+  margin-top: 12px !important;
+}
