--- a/src/pages/homepagelogin/index.css
+++ b/src/pages/homepagelogin/index.css
@@ -1,25 +1,26 @@
-.job-item-button-group {
+.job-item-group-button {
     display: flex;
-    justify-content: center;
-    align-items: center;
+    justify-content:center;
+    border-top: 1.5px solid #dedede ;
+}
+.job-item-group-button-child{
     text-align: center;
-    border: 1px solid #11111138;
-    margin: 0;
-
-    .candidate-numbers {
-        border-right: 1px solid #11111138;
-    }
-
-    button {
-        height: 45px;
-        background-color: transparent;
-        border: none;
-
-        svg {
-            height: 18px;
-            width: 18px;
-        }
-    }
+    padding: 10px 1em;
+    width: 100%;
+    font-size: 15px;
+    font-weight: 300;
+}
+.job-item-group-button-child button{
+    border: none;
+    background-color: transparent;
+    font-weight: 300;
+}
+job-item-group-button-child button:hover{
+    text-decoration: underline;
+}
+.job-item-group-button-child svg {
+    margin-right: 5px;
+    margin-bottom: 2px;
 }
 
 .job-container {
@@ -30,6 +31,7 @@
     font-family: "Noto Sans", sans-serif;
     flex: auto;
     text-align: left;
+    margin-bottom: 1.5em;
 
     .post-job-button {
         display: flex;
@@ -42,14 +44,24 @@
     }
 }
 
+.job-item-posted {
+    border-left: 8px solid #247710 !important;
+}
+
+.job-item-reviewing {
+    border-left: 8px solid #ffbb33 !important;
+}
+
+.job-item-denied {
+    border-left: 8px solid #626262 !important;
+}
+
 .job-container .job-item {
     background-color: white;
     position: relative;
     display: flex;
     margin-bottom: 1.5rem;
-    border: 1px solid #11111138;
-    border-left: 10px solid #247710;
-    border-radius: 0 3px 3px 0;
+    border: .5px solid #dedede;
     flex-direction: column;
 
     .job-item-info {
@@ -66,12 +78,24 @@
             color: white;
         }
 
+        .status-reviewing {
+            background-color: #ffbb33;
+            color: black;
+        }
+
+        .status-denied {
+            background-color: #626262;
+            color: white;
+        }
+
         span {
             font-size: 1.5rem;
         }
 
         .title {
-            margin: 1rem 0;
+            font-weight: 400;
+            margin-top: 1em;
+            margin-bottom: 1em;
         }
     }
 }
@@ -90,7 +114,7 @@
     height: 50px;
     background-color: #f0f0f0;
     border-radius: 5px;
-    border: 1px solid #00000038;
+    border: solid .5px #dedede;
 }
 
 .job-item-enterprise-info {
@@ -137,4 +161,16 @@
 .errAppear{
     opacity: 0;
     visibility: hidden;
+}
+
+.link-candidate{
+    color: #333;
+    text-decoration: none;
+}
+.link-candidate svg{
+    margin-right: 5px;
+    margin-bottom: 2px;
+}
+.link-candidate:hover{
+    text-decoration: underline;
 }
