--- a/src/pages/candidates/index.css
+++ b/src/pages/candidates/index.css
@@ -7,6 +7,7 @@
     flex-direction: column;
     align-items: center;
     gap: 20px;
+    margin-bottom: 20px;
 }
 
 .card {
@@ -59,7 +60,7 @@
     margin-bottom: 16px;
 }
 
-.card-actions{
+.card-actions {
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -74,7 +75,7 @@ a.card-btn {
     font-size: 16px !important;
 }
 
-a.card-btn{
+a.card-btn {
     margin-top: 8px;
 }
 
@@ -91,3 +92,50 @@ a.card-btn{
     font-weight: 300;
 }
 
+
+.pagination {
+    display: flex;
+    justify-content: center;
+    list-style: none;
+    padding: 0;
+    margin: 0;
+}
+
+.page-item {
+    margin: 0;
+    position: relative;
+}
+
+.page-item.active{
+   border-bottom: solid 1.5px #0e8136;
+}
+
+.page-item.active .page-link{
+    font-weight: bold;
+}
+
+.page-item .page-link {
+    display: block;
+    color: #1c1c1c !important;
+    font-size: 1.6rem !important;
+    text-wrap: nowrap;
+    padding: 0.7rem 1.1rem;
+    text-decoration: none;
+    background-color: #fff !important;
+    border: 1px solid #dee2e6 !important;
+    cursor: pointer;
+}
+
+.page-item .page-link {
+    border-radius: 0 !important;
+}
+
+.page-item .page-link:hover {
+    text-decoration: underline;
+    font-weight: bold;
+    color: #0e8136 !important;
+}
+
+.page-item .page-link.text{
+    color: #1c1c1c !important;
+}
